moved list styles into the stylesheet
  * This will remove the stars from the list in non graphical browsers
    and fall back to bullet list.

  * makes it easier to change the style of the feature list

--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,13 @@
         <h1>Alchemist comes with a bunch of features, which are:</h1>
         <div class="features">
           <ul>
-            <li>✰ &nbsp;&nbsp;Compile & Execution</li>
-            <li>✰ &nbsp;&nbsp;Inline code evaluation</li>
-            <li>✰ &nbsp;&nbsp;<a href="http://elixir-lang.org/docs/stable/mix/">Mix</a> integration</li>
-            <li>✰ &nbsp;&nbsp;Documentation lookup</li>
-            <li>✰ &nbsp;&nbsp;Code definition lookup</li>
-            <li>✰ &nbsp;&nbsp;Smart code completion</li>
-            <li>✰ &nbsp;&nbsp;Powerful <a href="http://elixir-lang.org/docs/stable/iex/">IEx</a> integration</li>
+            <li>Compile & Execution</li>
+            <li>Inline code evaluation</li>
+            <li><a href="http://elixir-lang.org/docs/stable/mix/">Mix</a> integration</li>
+            <li>Documentation lookup</li>
+            <li>Code definition lookup</li>
+            <li>Smart code completion</li>
+            <li>Powerful <a href="http://elixir-lang.org/docs/stable/iex/">IEx</a> integration</li>
           </ul>
         </div>
 
